<resources>
    <string name="app_name">Xô Muriçoca</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_esqueceu_senha">Esqueceu a senha?</string>
    <string name="action_criar_conta">Ainda não Possui uma conta? Clique aqui!</string>
    <string name="info_logo">Foto da muriçoca</string>
    <string name="info_cadastro_sucesso">Operação realizada com sucesso!</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_entrar_sem_login">Entrar sem cadastro</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_heat_map">Map</string>
    <string name="title_activity_main">Xô Muriçoca</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
