<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/tela_login"
    tools:context="com.example.mario.projetopratico.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/info_logo"
                android:src="@drawable/logo"
                />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                     />

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_marginTop="-5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="-5dp"
                android:id="@+id/action_esqueceu_senha"
                android:layout_width="match_parent"
                android:text="@string/action_esqueceu_senha"
                android:textColor="@android:color/holo_blue_dark"
                android:textColorLink="@android:color/holo_purple"
                android:maxLines="1"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/action_criar_conta"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/action_criar_conta"
                android:textColor="@android:color/holo_blue_dark"
                android:textColorLink="@android:color/holo_purple"
                android:maxLines="1"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/action_entrar_sem_conta"
                android:layout_marginTop="70dp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:text="@string/action_entrar_sem_login"
                android:textColor="@android:color/holo_blue_dark"
                android:maxLines="1"
                android:textColorLink="@android:color/holo_purple"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
